# dql

./: .bumpversion.cfg  .editorconfig  .gitignore  .python-version  README.rst  pyproject.toml  requirements_dev.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: code-workflows.yml
doc/: conf.py
doc/topics/: develop.rst
dql/: __init__.py  cli.py  engine.py  help.py  models.py  monitor.py  output.py  throttle.py  util.py
dql/expressions/: base.py  constraint.py  selection.py  update.py  visitor.py
dql/grammar/: __init__.py  common.py  query.py
tests/: __init__.py  test_cli.py  test_engine.py  test_history.py  test_parser.py  test_queries.py  test_save.py
travisci/: install_dynamodb_local.sh
